# AEGIS--

./: .firebaserc  .gitignore  CLAUDE.md  DEPLOY.md  FOUNDERS.md  HANDOFF.md  HANDOFF_V8.md  LICENSE  README.md  build.sh  deploy-swarm.ps1  docker-compose.yml  run-swarm.ps1  vercel.json
.claude/: settings.json
aegis-runtime/: Cargo.toml
aegis-runtime/scripts/: setup-cloud-env.sh  swarm_monitor.js
aegis-runtime/src/: acoustic_dfa.rs  affine_canvas.rs  autonode.rs  domain_boundary.rs  domain_firewall.rs  genesis_ledger.rs  gossip_emitter.rs  hysteresis.rs  lib.rs  semantic_algebra.rs  semantic_graph.rs  state_anchor.rs  telemetry_emitter.rs  validation_dfa.rs
aegis-runtime/tests/: pipeline_integration.rs
aegisomega-webgpu/: index.html
agents/: adaptive_lineage.json  agents.yaml  cognitive_pipeline.py  coordinator.py  evolution.py  red_team.py  revenue_engine.py  run.sh  tool_runner.py  tools.py
cockpit/: .env.example  Dockerfile  cloudbuild.yaml  nginx.conf
content-calendar/: Dockerfile  cloudbuild.yaml  tailwind.config.js  vite.config.ts
crates/constitutional-substrate/: Cargo.toml  README.md
crates/constitutional-substrate/src/: archive.rs  attestation.rs  entropy.rs  lib.rs  primitives.rs  replay.rs
docs/: AUDIT_FINDINGS.md  GATE_202_HARNESS_SDK.md  GCCE_ARCHITECTURE.md  GCLOUD_WEB_ENV_SETUP.md  MYTHOS_COGNITIVE_SUBSTRATE.md  REPLAY_CONSTITUTION.md  SUBSTRATE_EVOLUTION.md  TELEMETRY_SPEC.md  TEMPORAL_SEAM.md  TRACEABILITY.md  architecture.md
gcce/: Cargo.toml
harness/: ingest.py
hook-generator/: Dockerfile  cloudbuild.yaml  vite.config.ts
(+371 files in other folders)
